Fix some spacing nonsense.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,11 +8,13 @@ html {
   // Use e.g. 1.6rem in the DOM to get 16px.
   font-size: 10px;
   font-family: 'Crimson Text', serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  padding: 0;
   margin: 0;
+  padding: $pad-xs;
   min-height: 100vh;
   text-align: center;
   font-size: 2.4rem;
